tests/aster/x/mochi/rosetta/call-a-function-1.error
error[A005]: list element type mismatch
  --> /workspace/mochi/tests/rosetta/x/Mochi/call-a-function-1.mochi:4:10

  4 |   return [0, 0.0]
    |          ^

help:
  Ensure all list elements share a type
